[package]
name = "keg-macros"
version = "0.1.0"
authors = ["João Oliveira <hello@jxs.pt>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5.5"
quote = "0.6.12"
syn = "0.15.33"
proc-macro2 = "0.4.28"
walkdir = "2.2.7"
regex = "1.1.6"
lazy_static = "1.3.0"
log = "0.4.6"
keg-functions = {path="../keg-functions/"}

[dev-dependencies]
tempdir = "0.3.7"
